tests/ui/reachable/unreachable-arm.stderr
error: unreachable pattern
  --> $DIR/unreachable-arm.rs:9:9
   |
LL |         Foo::B(_) | Foo::A(Box { .. }, 1) => { }
   |         --------------------------------- matches all the relevant values
LL |         Foo::A(_, 1) => { }
   |         ^^^^^^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/unreachable-arm.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

